SED-4430 PR feedbacks